# to_do_manager

./: .clang-format  CMakeLists.txt  HowToRun.docx  README.md
docs/: Doxyfile
docs/output/html/: _c_l_i_parser_8hpp_source.html  _logger_8hpp_source.html  _storage_8hpp_source.html  _task_8hpp_source.html  _task_manager_8hpp_source.html  _undo_stack_8hpp_source.html  annotated.html  annotated_dup.js  class_c_l_i_parser-members.html  class_c_l_i_parser.html  class_logger-members.html  class_logger.html  class_logger.js  class_storage-members.html  class_storage.html  class_storage.js  class_task-members.html  class_task.html  class_task.js  class_task_manager-members.html  class_task_manager.html  class_task_manager.js  class_undo_stack-members.html  class_undo_stack.html  class_undo_stack.js  classbasic__json-members.html  classbasic__json.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  classdetail_1_1binary__writer-members.html  classdetail_1_1binary__writer.html  classdetail_1_1exception-members.html  classdetail_1_1exception.html  classdetail_1_1file__input__adapter-members.html  classdetail_1_1file__input__adapter.html  classdetail_1_1input__stream__adapter-members.html  classdetail_1_1input__stream__adapter.html  classdetail_1_1invalid__iterator-members.html  (+328 more)
docs/output/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_f.js  classes_10.js  classes_11.js  classes_13.js  classes_2.js  classes_3.js  classes_8.js  classes_a.js  classes_f.js  functions_0.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_b.js  functions_c.js  functions_f.js  searchdata.js  variables_0.js  variables_2.js  (+2 more)
examples/: add_example.sh  list_example.sh
src/: CLIParser.cpp  CLIParser.hpp  Logger.cpp  Logger.hpp  Storage.cpp  Storage.hpp  Task.cpp  Task.hpp  TaskManager.cpp  TaskManager.hpp  UndoStack.cpp  UndoStack.hpp  main.cpp
tests/: CMakeLists.txt  TestCLIParser.cpp  TestStorage.cpp  TestTask.cpp  TestTaskManager.cpp
